--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,3 @@
-/**
-* Template Name: crownvalz
-* Updated: Sep 18 2023 with Bootstrap v5.3.2
-* Template URL: https://crownvalz.com/bootstrap-3-one-page-template-free-crownvalz/
-* Author: crownvalz.com
-* License: https://crownvalz.com/license/
-*/
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
   color: #334240;
@@ -43,10 +32,10 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 99999;
-  background: #164ea1;
+  background: #1b4d96;
   width: 40px;
   height: 40px;
-  border-radius: 4px;
+  border-radius: 40px 4px 4px 40px;
   transition: all 0.4s;
 }
 
