--- a/assets/css/bond.css
+++ b/assets/css/bond.css
@@ -91,7 +91,7 @@ button {
 }
 
 /* Floating Label Styles */
-.floating-label-group {
+/*.floating-label-group {
     position: relative;
     margin-bottom: 1.5rem;
 }
@@ -123,4 +123,4 @@ button {
     color: #495057;
     background-color: white;
     padding: 0 4px;
-}
+}*/
